Finished working on NormalPieceMovementStrategyFactory